# breve

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  DEPLOY.md  Dockerfile  LICENSE  NOTICE.md  README.md  REVIVAL.md  pyproject.toml
.github/workflows/: ci.yml
demos/: INDEX.md  bouncy.py  fountain.py  gatherers.py  gravity.py  hello_world.py  stack.py  swarm.py
docs/: WHY-WEB.md
legacy/: README.md
legacy/include/breve/: sound.h
python/breve/: __init__.py  ai_cli.py  ai_llm.py  cli.py  engine.py  objects.py  physics.py  physics_kernels.py  scene.py  shapes.py  share.py  util.py  vector.py  viz.py  viz3d.py  viz_pyglet.py  webapp.py
python/breve/web_static/: app.js  index.html  style.css
scenes/: example_arena.json  example_flock.json  example_funnel.json  example_gravity.json  example_pyramid.json  example_ramps.json  example_stairs.json  example_tower.json  example_volley.json  example_wander.json
tests/: test_physics.py  test_scene.py  test_share.py  test_smoke.py  test_swarm.py
