[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "breve"
version = "0.1.0a1"
description = "Modern revival of the breve 3D multi-agent / artificial-life simulation environment"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
authors = [
  { name = "Breve revival contributors" },
]
keywords = ["simulation", "multi-agent", "artificial-life", "3d", "emergent-behavior"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Life",
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
viz = [
  "pyglet>=2.0",
  "moderngl>=5.8",
  "moderngl-window>=2.4",
  "pyglm>=2.7",
]
ai = [
  "openai>=1.40",
  "python-dotenv>=1.0",
]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/jonklein/breve"
Documentation = "https://github.com/jonklein/breve/blob/master/REVIVAL.md"

[project.scripts]
breve-run = "breve.cli:main"
breve-ai = "breve.ai_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["python/breve"]

[tool.hatch.build.targets.wheel.sources]
"python/breve" = "breve"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]
