[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "breve"
version = "0.2.1"
description = "Modern revival of the breve 3D multi-agent / artificial-life simulation environment"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
authors = [
  { name = "Breve revival contributors" },
]
keywords = ["simulation", "multi-agent", "artificial-life", "3d", "emergent-behavior"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Life",
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
viz = [
  "pyglet>=2.0",
  "moderngl>=5.8",
  "moderngl-window>=2.4",
  "pyglm>=2.7",
]
ai = [
  "openai>=1.40",
  "python-dotenv>=1.0",
]
web = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "websockets>=12",
  "python-dotenv>=1.0",
]
# optional JIT for the rigid-body hot path (CPU)
fast = [
  "numba>=0.59",
]
# full AI + browser UI
webai = [
  "openai>=1.40",
  "python-dotenv>=1.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "websockets>=12",
]
# web UI + Numba physics
webfast = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "websockets>=12",
  "python-dotenv>=1.0",
  "numba>=0.59",
]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/jonklein/breve"
Documentation = "https://github.com/jonklein/breve/blob/master/REVIVAL.md"

[project.scripts]
breve-run = "breve.cli:main"
breve-ai = "breve.ai_cli:main"
breve-web = "breve.webapp:main"

[tool.hatch.build.targets.wheel]
packages = ["python/breve"]

[tool.hatch.build.targets.wheel.sources]
"python/breve" = "breve"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]
